--- a/index.html
+++ b/index.html
@@ -126,10 +126,27 @@ function loadMessages(langCode) {
 const lang = (navigator.language || "en").slice(0,2);
 loadMessages(["es","fr","it","de","nl","ja"].includes(lang) ? lang : "en");
 
-document.getElementById("download-btn").addEventListener("click", () => {
-    fetch(`${API_BASE}/api/title/get`).then(r => r.ok ? r.blob() : null)
-    .then(blob => {
-        if (!blob) return;
+document.getElementById("download-btn").addEventListener("click", async () => {
+    const response = await fetch(`${API_BASE}/api/title/get`);
+    if (!response.ok) return;
+    const blob = await response.blob();
+
+    if ('showSaveFilePicker' in window) {
+        const opts = {
+            suggestedName: "YouTube (Liinback).wad",
+            types: [{
+                description: 'WAD file',
+                accept: { 'application/octet-stream': ['.wad'] },
+            }],
+            excludeAcceptAllOption: true
+        };
+        try {
+            const handle = await window.showSaveFilePicker(opts);
+            const writable = await handle.createWritable();
+            await writable.write(blob);
+            await writable.close();
+        } catch { /* user cancelled */ }
+    } else {
         const url = URL.createObjectURL(blob);
         const a = document.createElement("a");
         a.href = url;
@@ -138,7 +155,7 @@ document.getElementById("download-btn").addEventListener("click", () => {
         a.click();
         a.remove();
         URL.revokeObjectURL(url);
-    });
+    }
 });
 </script>
 </body>
