--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@ img {
     animation: fadeIn 1.5s ease-in forwards;
     animation-delay: 1.25s;
 }
-#download-btn:hover { background-color: #f0f0f0; }
+#download-btn:hover {
+    background-color: #f0f0f0;
+}
 .credits {
     margin-top: 40px;
     font-size: 22px;
@@ -84,7 +86,10 @@ img {
     animation: fadeIn 1.5s ease-in forwards;
     animation-delay: 2s;
 }
-@keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
+@keyframes fadeIn {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
 @media (max-width: 700px) {
     #news-box, #guide-box { font-size: 24px; padding: 16px; }
     .description { font-size: 24px; }
@@ -106,7 +111,8 @@ img {
 const API_BASE = "https://liinbackapis.com";
 
 function loadMessages(langCode) {
-    fetch(`${API_BASE}/api/messages`).then(r => r.ok ? r.text() : Promise.reject())
+    fetch(`${API_BASE}/api/messages`, { method: "GET" })
+    .then(r => r.ok ? r.text() : Promise.reject())
     .then(xml => {
         const doc = new DOMParser().parseFromString(xml, "text/xml");
         const lang = doc.querySelector(`lang[code="${langCode}"]`);
@@ -126,20 +132,21 @@ function loadMessages(langCode) {
 const lang = (navigator.language || "en").slice(0,2);
 loadMessages(["es","fr","it","de","nl","ja"].includes(lang) ? lang : "en");
 
-document.getElementById("download-btn").addEventListener("click", async () => {
-    const response = await fetch(`${API_BASE}/api/title/get`);
-    if (!response.ok) return;
-    const blob = await response.blob();
-    const url = URL.createObjectURL(blob);
-    const a = document.createElement("a");
-    a.href = url;
-    a.download = "YouTube (Liinback).wad";
-    document.body.appendChild(a);
-    a.click();
-    a.remove();
-    URL.revokeObjectURL(url);
+document.getElementById("download-btn").addEventListener("click", () => {
+    fetch(`${API_BASE}/api/title/get`, { method: "GET" })
+    .then(r => r.ok ? r.blob() : null)
+    .then(blob => {
+        if (!blob) return;
+        const url = URL.createObjectURL(blob);
+        const a = document.createElement("a");
+        a.href = url;
+        a.download = "YouTube (Liinback).wad";
+        document.body.appendChild(a);
+        a.click();
+        a.remove();
+        URL.revokeObjectURL(url);
+    });
 });
 </script>
 </body>
 </html>
-
